# RepoPulse

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml
docs/: context-map.md  domain-model.md  notes.md  openclaw-mcp.md  ubiquitous-language.md
scripts/: docker-build.sh
src/: main.rs
src/application/: mod.rs  ports.rs
src/application/usecases/: handle_event.rs  mod.rs  run_once.rs  state.db
src/domain/: event.rs  mod.rs  policy.rs  types.rs  watch_target.rs
src/infrastructure/: broadcast_publisher.rs  composite_provider.rs  console_notifier.rs  event_bus.rs  fake_provider.rs  feishu_notifier.rs  github_branch_provider.rs  github_release_provider.rs  memory_store.rs  mod.rs  multi_notifier.rs  npm_latest_provider.rs  sqlite_store.rs
src/interfaces/: config.rs  http_api.rs  mcp.rs  mod.rs
tests/: dedup_should_notify_once.rs
