[package]
name = "repopulse"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
dotenvy = "0.15"
