[package]
name = "repopulse"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
async-trait = "0.1"
async-stream = "0.3"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "signal",
  "io-std",
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
dotenvy = "0.15"
serde_yaml = "0.9"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
